--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
-			name="description"
-			content="Web site created using create-react-app"
+			name="Flow-Task Manager"
+			content="The perfect app to help keep track of your daily tasks!"
 		/>
 		<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 		<!--
@@ -19,7 +19,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<!-- <link rel="manifest" href="/site.webmanifest" /> -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="manifest.json" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
